--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,25 @@
 //
 @import "~bootstrap/scss/bootstrap";
 
+.overlay {
+    display: flex;
+    position: fixed;
+    text-align: center;
+    text-transform: uppercase;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    .popup {
+        margin: auto;
+        height: 90vh;
+        width: 80%;
+        max-width: 300px;
+        max-height: 200px;
+        background-color: white;
+        border-radius: .5em;
+        .btn-container {
+            display: flex;
+            justify-content: space-around;
+        }
+
+    }
+}
